--- a/exercicios/ex022/fundo.005.html
+++ b/exercicios/ex022/fundo.005.html
@@ -3,16 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Personalizacao dos fundos</title>
+    <title>Posicionamento</title>
+
+    <style>
+
+        body {
+            height: 97vh;
+            background-image: url(imagens/wallpaper003.jpg);
+            background-position: center center;
+        }
+
+    </style>
 </head>
 <body>
     
-    <style>
-        body {
-            background-image: url('imagens/pattern001.png');
-           background-size: 100px 100px;
-           background-repeat: no-repeat;
-        }
-    </style>
 </body>
 </html>
