--- a/exercicios/ex022/fundo006.html
+++ b/exercicios/ex022/fundo006.html
@@ -3,23 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fundo fixo de tela</title>
 
     <style>
 
         body {
-            height: 100vh;
+            /*
             background-color: black;
             background-image: url(imagens/wallpaper002.jpg);
             background-position: center center;
             background-repeat: no-repeat;
             background-size: cover;
+            background-attachment: fixed;
 
+            /*
+            
+            shorthand - background
+            color image position repeat size attachment
+            obs - background size nao fundiona.
+            */
+
+            height: 98vh;
+            background: black url(imagens/wallpaper002.jpg) center center no-repeat fixed;
+            background-size: cover;
         }
 
         main {
             background-color: white;
-            width: 400px;
+            max-width: 400px;
             padding: 10px;
             margin: auto;
             border: 1px solid darkblue ;
@@ -38,6 +49,30 @@
 
             <p>
                 Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aspernatur quod veritatis nihil provident ea reprehenderit, earum tenetur neque cumque dolorem similique. Atque iste maiores temporibus ad doloremque dignissimos, ut non. 
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorum aliquid suscipit minima non debitis? Dolor, alias, nemo magni quod similique suscipit minus libero sed maiores ex nihil mollitia voluptatem corporis.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius odit labore fuga numquam ad possimus corporis unde doloremque consectetur explicabo aspernatur voluptate aut hic minima sed, dolorum deserunt blanditiis. Est!
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aspernatur quod veritatis nihil provident ea reprehenderit, earum tenetur neque cumque dolorem similique. Atque iste maiores temporibus ad doloremque dignissimos, ut non. 
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorum aliquid suscipit minima non debitis? Dolor, alias, nemo magni quod similique suscipit minus libero sed maiores ex nihil mollitia voluptatem corporis.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius odit labore fuga numquam ad possimus corporis unde doloremque consectetur explicabo aspernatur voluptate aut hic minima sed, dolorum deserunt blanditiis. Est!
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aspernatur quod veritatis nihil provident ea reprehenderit, earum tenetur neque cumque dolorem similique. Atque iste maiores temporibus ad doloremque dignissimos, ut non. 
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorum aliquid suscipit minima non debitis? Dolor, alias, nemo magni quod similique suscipit minus libero sed maiores ex nihil mollitia voluptatem corporis.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius odit labore fuga numquam ad possimus corporis unde doloremque consectetur explicabo aspernatur voluptate aut hic minima sed, dolorum deserunt blanditiis. Est!
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aspernatur quod veritatis nihil provident ea reprehenderit, earum tenetur neque cumque dolorem similique. Atque iste maiores temporibus ad doloremque dignissimos, ut non. 
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorum aliquid suscipit minima non debitis? Dolor, alias, nemo magni quod similique suscipit minus libero sed maiores ex nihil mollitia voluptatem corporis.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius odit labore fuga numquam ad possimus corporis unde doloremque consectetur explicabo aspernatur voluptate aut hic minima sed, dolorum deserunt blanditiis. Est!
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aspernatur quod veritatis nihil provident ea reprehenderit, earum tenetur neque cumque dolorem similique. Atque iste maiores temporibus ad doloremque dignissimos, ut non. 
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorum aliquid suscipit minima non debitis? Dolor, alias, nemo magni quod similique suscipit minus libero sed maiores ex nihil mollitia voluptatem corporis.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius odit labore fuga numquam ad possimus corporis unde doloremque consectetur explicabo aspernatur voluptate aut hic minima sed, dolorum deserunt blanditiis. Est!
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aspernatur quod veritatis nihil provident ea reprehenderit, earum tenetur neque cumque dolorem similique. Atque iste maiores temporibus ad doloremque dignissimos, ut non. 
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorum aliquid suscipit minima non debitis? Dolor, alias, nemo magni quod similique suscipit minus libero sed maiores ex nihil mollitia voluptatem corporis.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius odit labore fuga numquam ad possimus corporis unde doloremque consectetur explicabo aspernatur voluptate aut hic minima sed, dolorum deserunt blanditiis. Est!
+
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aspernatur quod veritatis nihil provident ea reprehenderit, earum tenetur neque cumque dolorem similique. Atque iste maiores temporibus ad doloremque dignissimos, ut non. 
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorum aliquid suscipit minima non debitis? Dolor, alias, nemo magni quod similique suscipit minus libero sed maiores ex nihil mollitia voluptatem corporis.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius odit labore fuga numquam ad possimus corporis unde doloremque consectetur explicabo aspernatur voluptate aut hic minima sed, dolorum deserunt blanditiis. Est!
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aspernatur quod veritatis nihil provident ea reprehenderit, earum tenetur neque cumque dolorem similique. Atque iste maiores temporibus ad doloremque dignissimos, ut non. 
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorum aliquid suscipit minima non debitis? Dolor, alias, nemo magni quod similique suscipit minus libero sed maiores ex nihil mollitia voluptatem corporis.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius odit labore fuga numquam ad possimus corporis unde doloremque consectetur explicabo aspernatur voluptate aut hic minima sed, dolorum deserunt blanditiis. Est!Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aspernatur quod veritatis nihil provident ea reprehenderit, earum tenetur neque cumque dolorem similique. Atque iste maiores temporibus ad doloremque dignissimos, ut non. 
                 Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorum aliquid suscipit minima non debitis? Dolor, alias, nemo magni quod similique suscipit minus libero sed maiores ex nihil mollitia voluptatem corporis.
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius odit labore fuga numquam ad possimus corporis unde doloremque consectetur explicabo aspernatur voluptate aut hic minima sed, dolorum deserunt blanditiis. Est!
             </p>
