--- a/exercicios/ex024/iframe003.html
+++ b/exercicios/ex024/iframe003.html
@@ -29,14 +29,14 @@
 
         <ul>
             <li><a href="pag001.html" target="frame">Primeira pagina</a></li>
-            <li><a href="#">Segunda pagina</a></li>
-            <li><a href="#">Terceira pagina</a></li>
+            <li><a href="../ex023/tabela006.html" target="frame">Segunda pagina</a></li>
+            <li><a href="../ex023/tabela005.html" target="frame">Terceira pagina</a></li>
         </ul>
 
    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque at, voluptatem enim soluta eum, laborum eveniet neque consequatur ex dolores quisquam perferendis nihil mollitia iure laudantium doloremque minima. Maxime, architecto!  Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque at, voluptatem enim soluta eum, laborum eveniet neque consequatur ex dolores quisquam perferendis nihil mollitia iure laudantium doloremque minima. Maxime, architecto! </p>
     </p>
 
-    <iframe id="tela" name="frame" src="">
+    <iframe id="tela" name="frame" srcdoc="<h1>Escolha uma das opçoes acima </h1>">
     <p>Infelizmente seu navegador nao e compatível com isso.</p>
     </iframe>
 
