--- a/exercicios/ex024/pag006.html
+++ b/exercicios/ex024/pag006.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     
-    <h1>Conteudos dentro de iframes</h1>
+    <h1>Conteúdos dentro de Iframes</h1>
 
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae eius, dicta cupiditate consectetur eveniet totam earum deleniti sequi voluptas? Dolorum voluptatem nulla eligendi earum, iusto optio velit nobis in odit.</p>
 
@@ -22,6 +22,9 @@
 
 
     <h2>Mapas do Waze</h2>
+    <h1>
+        
+    </h1>
 
     <iframe src="https://embed.waze.com/iframe?zoom=16&lat=-18.916548&lon=-48.271040&ct=livemap" width="600" height="450" allowfullscreen></iframe>
 </body>
